-DbHelper class and user class

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -97,6 +97,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:background="@drawable/signup_btn_orange"
+            android:onClick="signup_pressed"
             android:text="SignUp"
             android:textColor="#ffffff"
             android:textSize="24sp"
