--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView_food">
 
         <EditText
-            android:id="@+id/editText_username"
+            android:id="@+id/editText_email"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
@@ -50,7 +50,7 @@
             android:layout_marginBottom="8dp"
             android:background="@drawable/background_signup_edittext"
             android:ems="10"
-            android:hint="Username"
+            android:hint="Email"
             android:inputType="text"
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
