--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -88,6 +88,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:background="@drawable/signup_btn_orange"
+            android:onClick="login_pressed"
             android:text="Login"
             android:textColor="#ffffff"
             android:textSize="24sp"
