--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -69,7 +69,7 @@
             android:background="@drawable/background_signup_edittext"
             android:ems="10"
             android:hint="Password"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
 
@@ -84,7 +84,7 @@
             android:background="@drawable/background_signup_edittext"
             android:ems="10"
             android:hint="RePassword"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
 
