--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,45 +8,37 @@
     tools:context=".MainPage">
 
     <EditText
-        android:id="@+id/editTextText2"
-        android:layout_width="210dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="88dp"
+        android:id="@+id/textQuery"
+        android:layout_width="268dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
+        android:hint="Enter recipe or ingredients"
         android:inputType="text"
-        android:text="Enter recipe or ingredients"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.422"
+        app:layout_constraintHorizontal_bias="0.111"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/username"
-        android:layout_width="69dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="88dp"
-        android:layout_marginEnd="336dp"
-        android:text="Put username here"
-        android:textSize="21sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
-        android:id="@+id/button"
+        android:id="@+id/searchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
         android:text="Search"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editTextText2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textQuery"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recommendationsView"
         android:layout_width="407dp"
-        android:layout_height="531dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="600dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
+        app:layout_constraintTop_toBottomOf="@+id/textQuery" />
 </androidx.constraintlayout.widget.ConstraintLayout>
