--- a/app/src/main/res/layout/recommendations.xml
+++ b/app/src/main/res/layout/recommendations.xml
@@ -9,36 +9,46 @@
 
     <ImageView
         android:id="@+id/recipeImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="120dp"
+        android:layout_height="150dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/recipeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/recipeImage"
-        android:text="TextView"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
-        />
+        android:layout_toEndOf="@+id/recipeImage"
+        android:text="TextView"
+        android:textStyle="bold|italic" />
 
     <TextView
         android:id="@+id/recipeTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/recipeName"
+        android:layout_below="@id/recipeDesc"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
         android:layout_toEndOf="@+id/recipeImage"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/recipeReview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/recipeDesc"
+        android:layout_toEndOf="@+id/recipeTime"
         android:text="TextView"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
         />
 
     <TextView
-        android:id="@+id/recipeReview"
+        android:id="@+id/recipeDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/recipeTime"
+        android:layout_below="@+id/recipeName"
         android:layout_toEndOf="@+id/recipeImage"
         android:text="TextView"
         android:layout_marginStart="16dp"
@@ -48,10 +58,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="#A4A4A4"
-        android:layout_below="@id/recipeImage"
+        android:layout_below="@id/recipeTime"
         android:layout_marginVertical="16dp"
-        />
+        android:background="#A4A4A4" />
 
 
 </RelativeLayout>
