--- a/app/src/main/res/layout/recommendations.xml
+++ b/app/src/main/res/layout/recommendations.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recipeItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -38,22 +39,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/recipeDesc"
-        android:layout_toEndOf="@+id/recipeTime"
-        android:text="TextView"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
-        />
+        android:layout_toEndOf="@+id/recipeTime"
+        android:text="TextView" />
 
     <TextView
         android:id="@+id/recipeDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/recipeName"
-        android:layout_toEndOf="@+id/recipeImage"
-        android:text="TextView"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
-        />
+        android:layout_toEndOf="@+id/recipeImage"
+        android:text="TextView" />
 
     <LinearLayout
         android:layout_width="match_parent"
