Added designs for new Activities and added intents too new activities

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,6 @@
     </style>
 
     <style name="Theme.JSONExample" parent="Base.Theme.JSONExample" />
+
+    <style name="Theme.AppCompat.Light.DarkActionBar" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
