--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -44,6 +44,7 @@
                 android:text="TextView" />
 
             <TableLayout
+                android:id="@+id/nutritionTable"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
