--- a/app/src/main/res/menu/mainpagemenu.xml
+++ b/app/src/main/res/menu/mainpagemenu.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="History" />
-    <item android:title="Favorites" />
-    <item android:title="Options" />
+    <item
+        android:id="@+id/menu_history"
+        android:title="History" />
+    <item
+        android:id="@+id/menu_favourites"
+        android:title="Favorites" />
 </menu>
