--- a/app/src/main/res/layout/recommendations.xml
+++ b/app/src/main/res/layout/recommendations.xml
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/recipeDesc"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="16dp"
         android:layout_toEndOf="@+id/recipeImage"
         android:text="TextView" />
@@ -39,7 +40,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/recipeDesc"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="16dp"
         android:layout_toEndOf="@+id/recipeTime"
         android:text="TextView" />
@@ -53,6 +55,19 @@
         android:layout_marginBottom="16dp"
         android:layout_toEndOf="@+id/recipeImage"
         android:text="TextView" />
+
+    <Button
+        android:id="@+id/addToFavorites"
+        android:layout_width="wrap_content"
+        android:layout_height="28dp"
+        android:layout_below="@id/recipeDesc"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_toEndOf="@id/recipeReview"
+        android:background="@color/orangePrimary"
+        android:text="Add To Favorites"
+        android:textColor="@color/black"
+        android:textSize="8sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
