--- a/app/src/main/res/layout/recommendations.xml
+++ b/app/src/main/res/layout/recommendations.xml
@@ -30,8 +30,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/recipeDesc"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_toEndOf="@+id/recipeImage"
         android:text="TextView" />
 
@@ -39,11 +39,11 @@
         android:id="@+id/recipeReview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/recipeDesc"
+        android:layout_below="@+id/recipeTime"
         android:layout_marginStart="13dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="0dp"
         android:layout_marginBottom="16dp"
-        android:layout_toEndOf="@+id/recipeTime"
+        android:layout_toEndOf="@+id/recipeImage"
         android:text="TextView" />
 
     <TextView
@@ -56,23 +56,10 @@
         android:layout_toEndOf="@+id/recipeImage"
         android:text="TextView" />
 
-    <Button
-        android:id="@+id/addToFavorites"
-        android:layout_width="wrap_content"
-        android:layout_height="28dp"
-        android:layout_below="@id/recipeDesc"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="15dp"
-        android:layout_toEndOf="@id/recipeReview"
-        android:background="@color/orangePrimary"
-        android:text="Add To Favorites"
-        android:textColor="@color/black"
-        android:textSize="8sp" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_below="@id/recipeTime"
+        android:layout_below="@id/recipeReview"
         android:layout_marginVertical="16dp"
         android:background="#A4A4A4" />
 
